--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 <html lang="en" class="h-100">
    <head>
       <title>Tableau de bord Promotion 2023</title>
+<meta name = DC.title* content-"CIFAMN : Tableau de bord
+promotion 2023”/>
+<meta name=DC.description *
+content-"Effectif des apprenants par secteur d’activité, Pays, évaluation communication et cours”/>
+<meta name=DC.subject* content-"Données des apprenants et enseignants par Pays, fonction genre et par âge ”/>
+<meta name=DC.creator* content="Groupe Web ”/>
+<meta name=DC.contributor* content="BODO Gérard ”/>
+<meta name=DC.contributor* content="Laurianne RANDRIATIANA“/> 
+<meta name=DC.contributor* content="Débora HOUENOU”/> 
+<meta name=DC.contributor* content="ESSOUM Martin”/> 
+<meta name=DC.contributor* content="T.Hyacinthe”/>
+<meta name=DC.modified* content="2023-05-01 ”/>
+<meta name=DC.date accepted* content="2023-04-30 ”/>
+<meta name="DC.format* content=*text/HTML“/>  
+<meta name=DC.identified * content="https://tiakorhanitra.github.io/cifamn2023.github.io/”/>
+<meta name=DC.rights* content=" ”/>
+<meta name=DC.accessRights* content="Public  ”/>
+<meta name="language* content="Français *>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!--Meta indexation DC, JLD, Open Graph, Twitter Cards -->
