--- a/index.html
+++ b/index.html
@@ -2,24 +2,22 @@
 <html lang="en" class="h-100">
    <head>
       <title>Tableau de bord Promotion 2023</title>
-<meta name = DC.title* content-"CIFAMN : Tableau de bord
-promotion 2023”/>
-<meta name=DC.description *
-content-"Effectif des apprenants par secteur d’activité, Pays, évaluation communication et cours”/>
-<meta name=DC.subject* content-"Données des apprenants et enseignants par Pays, fonction genre et par âge ”/>
-<meta name=DC.creator* content="Groupe Web ”/>
-<meta name=DC.contributor* content="BODO Gérard ”/>
-<meta name=DC.contributor* content="Laurianne RANDRIATIANA“/> 
-<meta name=DC.contributor* content="Débora HOUENOU”/> 
-<meta name=DC.contributor* content="ESSOUM Martin”/> 
-<meta name=DC.contributor* content="T.Hyacinthe”/>
-<meta name=DC.modified* content="2023-05-01 ”/>
-<meta name=DC.date accepted* content="2023-04-30 ”/>
-<meta name="DC.format* content=*text/HTML“/>  
-<meta name=DC.identified * content="https://tiakorhanitra.github.io/cifamn2023.github.io/”/>
-<meta name=DC.rights* content=" ”/>
-<meta name=DC.accessRights* content="Public  ”/>
-<meta name="language* content="Français *>
+      <meta name = DC.title* content=" CIFAMN : Tableau de bordpromotion 2023” "/>
+      <meta name=DC.description * content=" Effectif des apprenants par secteur d’activité, Pays, évaluation communication et cours” "/>
+      <meta name=DC.subject* content=" Données des apprenants et enseignants par Pays, fonction genre et par âge ” "/>
+      <meta name=DC.creator* content="Groupe Web ” "/>
+      <meta name=DC.contributor* content= "BODO Gérard ” "/>
+      <meta name=DC.contributor* content="Laurianne RANDRIATIANA“ "/> 
+      <meta name=DC.contributor* content="Débora HOUENOU” "/> 
+      <meta name=DC.contributor* content="ESSOUM Martin” "/> 
+      <meta name=DC.contributor* content="T.Hyacinthe” "/>
+      <meta name=DC.modified* content="2023-05-01 ” "/>
+      <meta name=DC.date accepted* content="2023-04-30 ” "/>
+      <meta name="DC.format* content=*text/HTML“ "/>  
+      <meta name=DC.identified * content=" https://tiakorhanitra.github.io/cifamn2023.github.io " />
+      <meta name=DC.rights* content=" ” "/>
+      <meta name=DC.accessRights* content="Public  ” "/>
+      <meta name="language* content="Français *>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!--Meta indexation DC, JLD, Open Graph, Twitter Cards -->
@@ -76,8 +74,8 @@ content-"Effectif des apprenants par secteur d’activité, Pays, évaluation co
       <div class="container-fluid">
       <div class="row p-3">
       <!-- Premier item 1 -->
-      <div class="col-lg-9">
-      <div class="card-header id ="graphe" bg-transparent">
+      <div class="col-lg-6">
+      <div class="card-header bg-transparent" id ="graphe" >
          <h5 class="card-title text-center" id="enseignant">Effectif des étudiants en fonction de leur secteur d’activité</h5>
       </div>
       <div class="card-body ">
@@ -87,7 +85,7 @@ content-"Effectif des apprenants par secteur d’activité, Pays, évaluation co
       </div>
       </div>
       <!-- Deuxième item 2 -->
-      <div class="col-lg-3 align-self-center">
+      <div class="col-lg-6 align-self-center">
       <div>
       <div class="card-header bg-transparent" >
               <div class="card-header bg-transparent">
@@ -96,7 +94,7 @@ content-"Effectif des apprenants par secteur d’activité, Pays, évaluation co
       <div class="card-body p-4">
             <!--Divs that will hold each control and chart-->
             <div id="chart2"></div>
-            <button type="button" id="b1" class="btn btn-secondary text-center"  >Cliquez-ici pour consulter l'effectifs(Hommes/Femmes)</button>
+            <button type="button" id="b1" class="btn btn-secondary text-center"  >Cliquez-ici pour consulter l'effectifs(Hommes/Femmes)</button>
           </div>       
           </div>
        </div>
@@ -114,9 +112,9 @@ content-"Effectif des apprenants par secteur d’activité, Pays, évaluation co
        </div>
        </div>
        <!--item4-->
-       <div class="col-lg-12 id="Sondage" p-5">
+       <div class="col-lg-12  p-5" id="Sondage">
       <div class="card-header bg-transparent">
-         <h5 class="card-title text-center" id="enseignant">Evaluation de la communication</h5>
+         <h5 class="card-title text-center" id="enseignant">Evaluation sur la communication</h5>
       </div>
       <div class="card-body p-4">
             <!--Divs that will hold each control and chart-->
@@ -136,8 +134,7 @@ content-"Effectif des apprenants par secteur d’activité, Pays, évaluation co
                  <div id="chart5"></div>
              </div>
              </div>
-             </div>
-             </div>
+         </div>            
        <div class="col-lg-6">
        <div class="card shadow p-3 mb-2 bg-body-tertiary">
        <div class="card-header bg-transparent">
