--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
       <div class="container-fluid">
       <!--Fin du Menu -->
       <!-- Une section de contenu -->
-      <div class="col-sm-12">
       <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
       <!-- Une section de contenu pour un grand titre -->
       <div class="p-4 shadow"> 
@@ -74,7 +73,7 @@
       <div class="container-fluid">
       <div class="row p-3">
       <!-- Premier item 1 -->
-      <div class="col-lg-6">
+      <div class="col-sm-6">
       <div class="card-header bg-transparent" id ="graphe" >
          <h5 class="card-title text-center" id="enseignant">Effectif des étudiants en fonction de leur secteur d’activité</h5>
       </div>
@@ -84,8 +83,7 @@
           </div>
       </div>
       <!-- Deuxième item 2 -->
-      <div class="col-lg-6 align-self-center">
-      <div>
+      <div class="col-sm-6 align-self-center">
       <div class="card-header bg-transparent" >
               <div class="card-header bg-transparent">
          <h5 class="card-title text-center" id="enseignant">Effectif des étudiants CIFAMN Promotion2023 selon leur genre</h5>
@@ -96,7 +94,6 @@
             <button type="button" id="b1" class="btn btn-secondary text-center"  >Cliquez-ici pour consulter l'effectifs(Hommes/Femmes)</button>
           </div>       
           </div>
-       </div>
        </div>
       </div>
 
@@ -121,7 +118,6 @@
             <!--Divs that will hold each control and chart-->
             <div id="chart4"></div>
           </div>
-      </div>
       </div>
        <!-- item 5-->
        <div class="row">
