--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <!-- Premier item 1 -->
       <div class="col-sm-6">
       <div class="card-header bg-transparent" id ="graphe" >
-         <h5 class="card-title text-center" id="enseignant">Effectif des étudiants en fonction de leur secteur d’activité</h5>
+         <h5 class="card-title text-center align-self-center" id="enseignant">Effectif des étudiants en fonction de leur secteur d’activité</h5>
       </div>
       <div class="card-body ">
             <!--Divs that will hold each control and chart-->
