--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
       <div class="card-body p-4">
             <!--Divs that will hold each control and chart-->
             <div id="chart2"></div>
-            <button type="button" id="b1" class="btn btn-secondary mx-5"  >Cliquez-ici pour consulter l'effectifs(Hommes/Femmes)</button>
+           <div class="align-self-center">
+            <button type="button" id="b1" class="btn btn-secondary"  >Cliquez-ici pour consulter l'effectifs(Hommes/Femmes)</button>
+          </div>   
           </div>       
           </div>
        </div>
